--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,67 @@
-@import "~@blueprintjs/core/lib/css/blueprint.css";
-
 .App {
-  text-align: center;
+    height: inherit;
+    text-align: center;
+    overflow: hidden;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.scene {
+    height: 100%;
+    background-color: lightcoral;
 }
 
-.App-link {
-  color: #61dafb;
+.scene-controls {
+    position: absolute;
+    top: 0;
+    right: 0;
+	margin: 12px;
+	background-color: #e4e4e45e;
+    padding: 1px 0;
+    border-radius: 4px;
+    box-shadow: 0px 0px 1px 0px #00000036;
+}
+
+@media (max-width: 736px) {
+    .scene-controls {
+        position: relative;
+        margin: 0;
+    }
+}
+
+.active-obj-controls {
+	border-top: 1px solid #0000001a;
+	padding-top: 5px;
+	padding-bottom: 2px;
+}
+
+.slider-container {
+	padding: 24px 10px 0 10px;
+	flex-grow:10;
+}
+
+.ellipsed-text {
+	white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
+
+.primary-text {
+	font-size: 1rem;
+	font-weight: 500;
+}
+
+.controls-row {
+    display: flex;
+    flex-direction: row;
+    /* min-width: 200px; */
+    /* height: 30px; */
+	margin: 9px 0;
+	padding-left: 9px;
+	padding-right: 9px;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.bp3-button.color-button {
+	background-color: blue;
+	background-image: none; 
 }
