--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
     top: 0;
     right: 0;
 	margin: 12px;
-	background-color: #e4e4e45e;
+	background-color: #f2f2f2;
     padding: 1px 0;
     border-radius: 4px;
     box-shadow: 0px 0px 1px 0px #00000036;
@@ -52,8 +52,6 @@
 .controls-row {
     display: flex;
     flex-direction: row;
-    /* min-width: 200px; */
-    /* height: 30px; */
 	margin: 9px 0;
 	padding-left: 9px;
 	padding-right: 9px;
