Reimplemented Scene using react-three-renderer

--- a/src/App.css
+++ b/src/App.css
@@ -2,19 +2,22 @@
     height: inherit;
     text-align: center;
     overflow: hidden;
+    display: flex;
+    flex-direction: column;
 }
 
-.scene {
-    height: 100%;
-    background-color: lightcoral;
+.scene-container {
+	flex-grow: 10;
+	position: relative;
 }
 
 .scene-controls {
+	z-index: 20;
     position: absolute;
     top: 0;
     right: 0;
-	margin: 12px;
-	background-color: #f2f2f2;
+    margin: 12px;
+    background-color: #fffffff0;
     padding: 1px 0;
     border-radius: 4px;
     box-shadow: 0px 0px 1px 0px #00000036;
@@ -28,38 +31,38 @@
 }
 
 .active-obj-controls {
-	border-top: 1px solid #0000001a;
-	padding-top: 5px;
-	padding-bottom: 2px;
+    border-top: 1px solid #0000001a;
+    padding-top: 5px;
+    padding-bottom: 2px;
 }
 
 .slider-container {
-	padding: 24px 10px 0 10px;
-	flex-grow:10;
+    padding: 24px 10px 0 10px;
+    flex-grow: 10;
 }
 
 .ellipsed-text {
-	white-space: nowrap;
+    white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
 }
 
 .primary-text {
-	font-size: 1rem;
-	font-weight: 500;
+    font-size: 1rem;
+    font-weight: 500;
 }
 
 .controls-row {
     display: flex;
     flex-direction: row;
-	margin: 9px 0;
-	padding-left: 9px;
-	padding-right: 9px;
+    margin: 9px 0;
+    padding-left: 9px;
+    padding-right: 9px;
     justify-content: space-between;
     align-items: center;
 }
 
 .bp3-button.color-button {
-	background-color: blue;
-	background-image: none; 
+    background-color: blue;
+    background-image: none;
 }
