--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,8 @@
 }
 
 .slider-container {
-    padding: 24px 10px 0 10px;
+    /* padding: 24px 10px 0 10px; */
+    padding: 0 10px 0 10px;
     flex-grow: 10;
 }
 
@@ -68,7 +69,7 @@
     background-image: none;
 }
 
-.deletion-popover-content {
+.popover-content {
     padding: 12px;
 }
 
