--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,7 @@
     position: absolute;
     top: 0;
     right: 0;
+    font-size: 16px;
     margin: 12px;
     background-color: #fffffff0;
     padding: 1px 0;
@@ -27,6 +28,7 @@
     .scene-controls {
         position: relative;
         margin: 0;
+        font-size: 18px;
     }
 }
 
@@ -37,7 +39,6 @@
 }
 
 .slider-container {
-    /* padding: 24px 10px 0 10px; */
     padding: 0 10px 0 10px;
     flex-grow: 10;
 }
@@ -49,7 +50,7 @@
 }
 
 .primary-text {
-    font-size: 1rem;
+    font-size: 1em;
     font-weight: 500;
 }
 
@@ -57,15 +58,14 @@
     display: flex;
     flex-direction: row;
     margin: 9px 0;
-    padding-left: 9px;
-    padding-right: 9px;
+    padding-left: 12px;
+    padding-right: 12px;
     justify-content: space-between;
     align-items: center;
 }
 
 .bp3-button.color-button {
     border-radius: 50%;
-    background-color: blue;
     background-image: none;
 }
 
